# poetica

./: LICENSE  README.md  pyproject.toml
demos/grade5_robotics/: PITCH.md  README.md  demo_transcript.txt  evidence_input_condition_action.json  generated_curriculum.yaml  lesson_input_condition_action.txt  obstacle_stop.poem  run_demo.sh  visual_robot_grid.txt
demos/mcp_agent_demo/: README.md  live_mcp_transcript.txt  transcript.txt
docs/: POETICA_SYNTAX_ARCHAEOLOGY.md  PRIOR_ART.md
examples/: assay.poem  counter.poem  deploy.poem  filesystem_visual.poem  fizzbuzz.poem  garden.poem  garden_visual.poem  hello.poem  pipeline.poem  robot.poem  sensor.poem
examples/curricula/: grade5_robotics.yaml  k8_stem_progression.yaml
examples/domains/: finance.yaml  microbiology.yaml  robotics.yaml
examples/syllabi/: grade5_robotics_syllabus.txt
src/poetica/: __init__.py  alignment.py  bridge.py  canvas.py  cli.py  cmd.py  compiler.py  curriculum.py  domain.py  gate.py  intent.py  lower.py  parser.py  playground.py  receipt.py  syllabus.py  visual.py
src/poetica/emitters/: __init__.py  base.py  bash_emitter.py  go_emitter.py  javascript_emitter.py  python_emitter.py  rust_emitter.py  sql_emitter.py
tests/: test_poetica.py
